# atom-simulation

./: CMakeLists.txt  gen_elements.py  vcpkg.json
.github/workflows/: cmake-single-platform.yml
data/: elements.json
src/: main.cpp
src/engine/: camera.cpp  camera.h  engine.cpp  engine.h  renderer.cpp  renderer.h
src/physics/: atom.cpp  atom.h  electron.cpp  electron.h  element.cpp  element.h  interaction.cpp  interaction.h  molecule.cpp  molecule.h  quantum.cpp  quantum.h  simulation.cpp  simulation.h
src/ui/: hud.cpp  hud.h  periodic_table.cpp  periodic_table.h
